deployment/live/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studierlangsam.de
spec:
  selector: { }
  template:
    spec:
      containers:
        - name: apache
          image: ${IMAGE}
          ports:
            - containerPort: 80
              name: web
          readinessProbe:
            httpGet:
              path: /
              port: web
            timeoutSeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: web
            timeoutSeconds: 30
            periodSeconds: 15
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
      imagePullSecrets:
        - name: ghcr.io
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  minReadySeconds: 20
