deployment/live/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studierlangsam-de
spec:
  ports:
    - port: 80
      targetPort: web
      name: web
  selector: {}
