deployment/live/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studierlangsam-de
  annotations:
    cert-manager.io/cluster-issuer: live
    traefik.ingress.kubernetes.io/router.middlewares: ingress-https-redirect@kubernetescrd,ingress-sts@kubernetescrd
spec:
  rules:
    - host: studierlangsam.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studierlangsam-de
                port:
                  name: web
  tls:
    - secretName: studierlangsam-de-tls
      hosts:
        - studierlangsam.de
